perbaikan pada type category, tambah enum
